@@ -23,12 +23,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ru.investbook</groupId>
     <artifactId>investbook</artifactId>
-    <version>2021.2.2</version>
+    <version>2021.3</version>
 
     <name>investbook</name>
     <description>Investor Accounting Book</description>
@@ -47,7 +47,7 @@
 
     <properties>
         <!-- Valid version is (0-255).(0-255).(0-65535) -->
-        <win.msi.version>21.2.2</win.msi.version>
+        <win.msi.version>21.3</win.msi.version>
         <java.version>15</java.version>
         <!-- version 3.2.0 provided by Spring Boot 2.4.1 has bug, using version from Spring Boot 2.3.4
          TODO remove after fix -->
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>com.github.spacious-team</groupId>
             <artifactId>broker-report-parser-api</artifactId>
-            <version>2021.2</version>
+            <version>2021.3</version>
         </dependency>
         <dependency>
             <groupId>com.github.spacious-team</groupId>
@@ -102,6 +102,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -292,6 +302,8 @@
                                 <javaOption>-XX:G1PeriodicGCInterval=5000</javaOption>
                                 <javaOption>-XX:GCTimeRatio=1</javaOption>
                                 <javaOption>-XX:MaxGCPauseMillis=2000</javaOption>
+                                <javaOption>-Xverify:none</javaOption> <!-- reduce VM.native_memory Class by 6MB -->
+                                <javaOption>-XX:-TieredCompilation</javaOption> <!-- reduce VM.native_memory Code by 20MB -->
                             </javaOptions>
                             <arguments>
                                 <argument>--spring.config.additional-location=file:./app/</argument>
